--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>AJAX-Assignment</title>
-    <link href="style.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <h1>AJAX</h1>
-    <div id="results"></div>
-    <div id="location-results"></div>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>AJAX-Assignment</title>
+  <link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+  <h1>AJAX</h1>
+  <h2>Select any name from below </h2>
+  <div id="results"></div>
+  <div id="location-results"></div>
+  <script src="script.js"></script>
+</body>
 
 </html>
